# cube

./: .gitignore  Cargo.toml  Dockerfile  README.md  build.sh  compile.sh
.github/workflows/: release.yml
script/: build.sh  common.sh  compile.sh  nginx.decode-camera-web.conf  run-decode-camera-web.sh  run.scanner.sh  test.sh
script/rust/: compile.sh  compile.wasm.sh  test.sh
src/: chunk.rs  decode.rs  encode.rs  lib.rs  main.rs  qr.rs  terminal.rs  wasm.rs
tests/: integration_test.rs
www/: index.html  main.js
