[package]
name = "cube"
version = "0.1.0"
edition = "2021"
description = "Convert any file to QR codes and back"
license = "Apache-2.0"
default-run = "cube-encode"

[features]
default = ["encode", "decode"]
encode = ["dep:qrcode", "dep:terminal_size", "dep:ctrlc"]
decode = ["dep:opencv", "dep:rqrr"]

[dependencies]
qrcode = { version = "0.14", optional = true }
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
rqrr = { version = "0.8", optional = true }
clap = { version = "4", features = ["derive"] }
flate2 = "1.0"
base64 = "0.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
hex = "0.4"
anyhow = "1.0"
ctrlc = { version = "3.4", optional = true }
terminal_size = { version = "0.4", optional = true }
opencv = { version = "0.98.1", optional = true }

[[bin]]
name = "cube-encode"
path = "src/bin/encode.rs"
required-features = ["encode"]

[[bin]]
name = "cube-decode"
path = "src/bin/decode.rs"
required-features = ["decode"]
